# flexible-rep-counter

./: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  rep_counter.toml  requirements.txt
app/: config.py  debug_console.py  loop.py  math_engine.py  pose_filters.py  skeleton_overlay.py  variance_angle_selector.py  vm_client.py
src/flexible_rep_counter/: __init__.py  default_rep_counter.toml  landmark_utils.py  session.py  types.py
src/flexible_rep_counter/core/: __init__.py  math_engine.py  pose_filters.py  settings.py  variance_angle_selector.py
tests/: test_package_import.py  test_session.py
visualizer/: __init__.py  opencv_runtime.py
